@@ -1,0 +1,29 @@
+---
+- name: Git
+  source: git
+  icon: default.png
+  menu:
+  - name: Overview
+    panel: panels/json/git.json
+  - name: Attraction/Retention
+    panel: panels/json/git_demographics.json
+- name: GitHub PRs
+  source: github
+  icon: default.png
+  menu:
+  - name: Overview
+    panel: panels/json/github_pullrequests.json
+  - name: Backlog
+    panel: panels/json/github_backlog.json
+  - name: Timing
+    panel: panels/json/github_pullrequests_timing.json
+- name: GitHub Issues
+  source: github
+  icon: default.png
+  menu:
+  - name: Overview
+    panel: panels/json/github_issues.json
+  - name: Backlog
+    panel: panels/json/github_backlog.json
+  - name: Timing
+    panel: panels/json/github_issues_timing.json
