@@ -11,9 +11,8 @@
             "https://github.com/grimoirelab/panels",
             "https://github.com/grimoirelab/mordred",
             "https://github.com/grimoirelab/reports",
-            "https://github.com/grimoirelab/training",
-            "https://github.com/grimoirelab/grimoirelab",
-            "https://github.com/grimoirelab/grimoirelab.github.io"
+            "https://github.com/chaoss/grimoirelab-tutorial",
+            "https://github.com/chaoss/grimoirelab"
         ],
         "github": [
             "https://github.com/grimoirelab/perceval",
@@ -27,9 +26,8 @@
             "https://github.com/grimoirelab/kibiter",
             "https://github.com/grimoirelab/mordred",
             "https://github.com/grimoirelab/reports",
-            "https://github.com/grimoirelab/training",
-            "https://github.com/grimoirelab/grimoirelab",
-            "https://github.com/grimoirelab/grimoirelab.github.io"
+            "https://github.com/chaoss/grimoirelab-tutorial",
+            "https://github.com/chaoss/grimoirelab"
         ]
     }
 }
